Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Tomatová s pestem</strong>
+<strong>Vývar se zeleninou a špenátovými fritátovými nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Hovězí stroganov s jasmínovou rýží</strong>
+<strong>Vepřová plec na slanině a rozmarýnu s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Uhlířské Špagety se sýrem</strong>
+<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							127,-
 						</span>
 </p>
 <p>
@@ -59,7 +59,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 5.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Kulajda s houbami, koprem a vajíčkem v menu <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kulajda s houbami, koprem a vajíčkem samostatně <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí nudličky v arašídové omáčce, zázvor, jasmínová rýže, čerstvá zelenina <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Sekaná pečeně, čerstvá majoránka, bramborová kaše, okurkový relish <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Vege burritos, fazole, rýže, rajčata, avokádo, cheddar sýr, bylinkový dip, listový salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta s kachním prsem a marinovanou červenou cibulí <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">99 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>100g Kokosový cheesecake s mangem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>80g Čokoládové brownie <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -137,7 +177,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s grilovanym ananasem a petrzelkovym pestem, cockovy salat s paprikami, cuketami a rajcaty 139</li><li>Peceny filet z cerstveho morskeho dasa a tresky s grilovanym ananasem a petrzelkovym pestem, cockovy salat s paprikami, cuketami a rajcaty 175</li><li>Thajske pomalu dusene veprove v arasidove omacce s paprikami a medem, jasminova ryze, salatek 139</li><li>Madarsky srnci paprikas s palivymi slovenskymi paprikami, slaninou a lzici zakysane smetany, chlupate knedliky {L} 165</li><li>Zapecene papriky plnene cervenou cockou s rajcaty, cibulkou a balkanskym syrem, bulgur, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s holandskou omackou s celozrnnou horcici, stouchane brambory s cibulkou, salatek 139</li><li>Peceny filet z cerstveho candata s holandskou omackou s celozrnnou horcici, stouchane brambory s cibulkou, salatek 175</li><li>Lasagne s hovezim masem, pecenymi paprikami, rajcaty a zelenymi bylinkami zapecene ve smetanove omacce, salatek {L} 139</li><li>Rostbif z danci kyty s krenovou omackou, gratinovane brambory, salatek 169</li><li>Maccronelli s omackou z lesnich hub, hlivy a hnedych zampionu se smetanou, lanyzovym olejem a parmezanem, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
