Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 05. 10. 2021</h5>
+<h5>Středa, 06. 10. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Ve dnech 27.-28.9. je jídelna ZAVŘENÁ. Těšíme se na Vás opět ve středu 29.9.</strong>
@@ -57,49 +57,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 5.10.2021</div>
+<div class="nadpis">Středa 6.10.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Kulajda s houbami, koprem a vajíčkem v menu <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kulajda s houbami, koprem a vajíčkem samostatně <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí nudličky v arašídové omáčce, zázvor, jasmínová rýže, čerstvá zelenina <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Sekaná pečeně, čerstvá majoránka, bramborová kaše, okurkový relish <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Vege burritos, fazole, rýže, rajčata, avokádo, cheddar sýr, bylinkový dip, listový salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta s kachním prsem a marinovanou červenou cibulí <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">99 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>100g Kokosový cheesecake s mangem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>80g Čokoládové brownie <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -110,19 +70,19 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kapustová s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Dorůžova pečená vepřová kotleta na omáčce s divokého koření, dušená rýže, volské oko</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí kýta, dušená rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Zapečené šunkofleky se sýrem a smetanou , kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s opečenými žampiony, smažené bramborové plátky, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z vepřové pečeně na jemné žampionové omáčce, celerové a batátové hranolky, opečená anglická slanina</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Smažené holandské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené dukátové buchtičky s vanilkovým šodo, smetanou a karamelem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zadělávané bramborové noky v omáčce z modrého sýra zjemněné smetanou, filírovaná kuřecí prsa</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát se sušenými rajčaty, olivami a balkánským sýrem, citrónový dresink, kuřecí nudličky</td><td class="menuPrice">134,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s hovězím masem, vařené brambory</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše s naší půlmetrovou klobásou, volským okem, kyselou okurkou, škvarky s cibulí</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s volským okem, smažené bramborové plátky, tatarka</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený řízek z vepřové pečeně, bramborová kaše s máslem a šnitlíkem, citron</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Filírovaná kuřecí prsa, hráškové pyré, grilovaná karotka, parmazán, vařené vejce</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné smetanové omáčce s kukuřicí a šunkou, špetzle</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná česnekovým dresinkem, ledovým salátem, zeleninou, sýrem a vepřovou panenkou, hranolky, zakysaná smetana</td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -165,6 +125,11 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Frankfurtská s párkem a brambory 1a,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Pečená kachna na kmíně se šouletem a vídeňskou cibulkou 1ac</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažené krůtí stripsy v cornflakes s bramborovou kaší a coleslaw salátem 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety Aglio - Olio a peperoncino s rukolou a sýrem Forte Classico 1a,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
