Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Vývar se zeleninou a špenátovými fritátovými nudlemi</strong>
+<strong>Gulášová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na slanině a rozmarýnu s rýží</strong>
+<strong>Krůtí gordon bleu s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
+<strong>Těstoviny s tomatovo-bazalkovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
@@ -59,7 +59,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 6.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bazalkou v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bazalkou samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí gyros, nakládaná zelenina, pita chléb, česnekový dresink <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Bramborové knedlíky plněné uzeným masem, červené zelí, smažená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>200g Brokolicové placky s quinoou, bramborová kaše, řepný salát <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta s mozzarellou a rajčaty <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>100g Tiramisu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Višňový koláč s tvarohem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>200g Jáhlový pudink s hruškovým pyré bez lepku a laktózy </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -137,7 +182,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s holandskou omackou s celozrnnou horcici, stouchane brambory s cibulkou, salatek 139</li><li>Peceny filet z cerstveho candata s holandskou omackou s celozrnnou horcici, stouchane brambory s cibulkou, salatek 175</li><li>Lasagne s hovezim masem, pecenymi paprikami, rajcaty a zelenymi bylinkami zapecene ve smetanove omacce, salatek {L} 139</li><li>Rostbif z danci kyty s krenovou omackou, gratinovane brambory, salatek 169</li><li>Maccronelli s omackou z lesnich hub, hlivy a hnedych zampionu se smetanou, lanyzovym olejem a parmezanem, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z norskeho slede s citronem a bylinkovou jogurtovou omackou, korenena ryze s cizrnou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a bylinkovou jogurtovou omackou, korenena ryze s cizrnou, salatek 169</li><li>Thajske kari s krutim masem, ananasem, kokosovym mlekem, arasidy a zeleninou, jasminova ryze 139</li><li>Smazeny teleci sekany rizek s goudou a petrzelkou, stouchane brambory s cibulkou, okurkovy salat  {L} 169</li><li>Burritos s pikantnim chilli s maslovymi fazolemi, paprikami a uzenymi chipotle, pecene brambory, jogurtovy dip, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
