Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,31 +7,24 @@
 <h5>Čtvrtek, 07. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Ve dnech 27.-28.9. je jídelna ZAVŘENÁ. Těšíme se na Vás opět ve středu 29.9.</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Gulášová</strong>
+<strong>Vývar se zeleninou a játrovou zavářkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Krůtí gordon bleu s vařeným bramborem a tatarkou</strong>
+<strong>Asijské rýžové nudle s kuřecím masem a koriandrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s tomatovo-bazalkovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Vepřová plec na cibulce s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							127,-
 						</span>
 </p>
 <p>
@@ -59,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 7.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí vývar, kořenová zelenina, pohanka v menu <em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí vývar, kořenová zelenina, pohanka samostatně <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí prso pečené na slanině, bramborovo-dýňové pyré, polníček, cherry rajčata <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřový guláš na pivu, marinovaná červená cibule, houskový knedlík <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Zeleninová tikka masala, marinované tofu, jasmínová rýže, koriandr <em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Variace bavorských baget <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>100g Vanilkový věneček <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>200g Jáhlový pudink s hruškovým pyré bez lepku a laktózy </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>100g Mrkvový dort s ořechy <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -137,7 +175,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s citronem a bylinkovou jogurtovou omackou, korenena ryze s cizrnou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a bylinkovou jogurtovou omackou, korenena ryze s cizrnou, salatek 169</li><li>Thajske kari s krutim masem, ananasem, kokosovym mlekem, arasidy a zeleninou, jasminova ryze 139</li><li>Smazeny teleci sekany rizek s goudou a petrzelkou, stouchane brambory s cibulkou, okurkovy salat  {L} 169</li><li>Burritos s pikantnim chilli s maslovymi fazolemi, paprikami a uzenymi chipotle, pecene brambory, jogurtovy dip, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z cerstve makrely s ananasovou salsou, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cersve prazmy s ananasovou salsou, zeleninovy kuskus, salatek {L} 175</li><li>Pad ka Prao – thajske restovane veprove s cerstvym chilli, fazolovymi lusky, cesnekem a sazenym vejcem, jasminova ryze, salatek 139</li><li>Doruzova pecena prsicka z divoke kachny s visnovou omackou, gratinovane brambory, salatek 169</li><li>Zapecena dyne hokkaido plnena cizrnovym kari, jasminova ryze, salatek {veganske} 139</li></ol>
 </td>
 </tr>
 </table>
